--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -288,28 +288,5 @@
     }
   }
 
-
-
-
-// body {
-//   background-color: #f5f5f5;
-//   margin: 0;
-//   overflow-x: hidden;
-//   font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI",
-//     Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
-//     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-// }
-
-
-
-
-// .btn-primary {
-//   background-color: #6da830;
-//   border-color: #6da830;
-// }
-
-// .btn-primary:hover {
-//   background-color: #6da830;
-//   border-color: #6da830;
-//   opacity: 0.8;
-// }
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
