chore: sccs ajustes

--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -6,11 +6,15 @@
 <div class="content" role="main">
   <app-home></app-home>
 
+  <app-search></app-search>
   <!-- Footer -->
-  <footer class="footer mt-auto py-3">
+  <footer class="footer">
     <app-footer></app-footer>
   </footer>
 
+  <app-login></app-login>
+  <!-- <app-register></app-register> -->
+
 </div>
 
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
