--- a/app/src/app/home/home.component.html
+++ b/app/src/app/home/home.component.html
@@ -106,7 +106,7 @@
 
 <!-- Browse by category -->
 <section class="browse-cat u-line section-padding bg-light-green">
-  <div class="container">
+  <div class="container swiper-slider">
     <div class="row">
       <div class="col-12">
         <div class="section-header-left">
@@ -123,50 +123,36 @@
                   <img src="assets/img/farms/125x125/cuisine-1.jpg" class="rounded-circle" alt="categories">
                 </div> <span class="text-custom-white cat-name">Alho</span>
               </a>
-            </div>
-            <div class="swiper-slide">
               <a href="#" class="categories">
                 <div class="icon text-custom-white bg-light-green ">
                   <img src="assets/img/farms/125x125/cuisine-2.jpg" class="rounded-circle" alt="categories">
                 </div> <span class="text-custom-white cat-name">Morango</span>
               </a>
-            </div>
-            <div class="swiper-slide">
               <a href="#" class="categories">
                 <div class="icon text-custom-white bg-light-green ">
                   <img src="assets/img/farms/125x125/cuisine-3.jpg" class="rounded-circle" alt="categories">
                 </div> <span class="text-custom-white cat-name">Pepino</span>
               </a>
-            </div>
-            <div class="swiper-slide">
               <a href="#" class="categories">
                 <div class="icon text-custom-white bg-light-green ">
                   <img src="assets/img/farms/125x125/cuisine-4.jpg" class="rounded-circle" alt="categories">
                 </div> <span class="text-custom-white cat-name">Banana</span>
               </a>
-            </div>
-            <div class="swiper-slide">
               <a href="#" class="categories">
                 <div class="icon text-custom-white bg-light-green ">
                   <img src="assets/img/farms/125x125/cuisine-5.jpg" class="rounded-circle" alt="categories">
                 </div> <span class="text-custom-white cat-name">Brócolis</span>
               </a>
-            </div>
-            <div class="swiper-slide">
               <a href="#" class="categories">
                 <div class="icon text-custom-white bg-light-green ">
                   <img src="assets/img/farms/125x125/cuisine-6.jpg" class="rounded-circle" alt="categories">
                 </div> <span class="text-custom-white cat-name">Cenoura</span>
               </a>
-            </div>
-            <div class="swiper-slide">
               <a href="#" class="categories">
                 <div class="icon text-custom-white bg-light-green ">
                   <img src="assets/img/farms/125x125/cuisine-7.jpg" class="rounded-circle" alt="categories">
                 </div> <span class="text-custom-white cat-name">Abacaxi</span>
               </a>
-            </div>
-            <div class="swiper-slide">
               <a href="#" class="categories">
                 <div class="icon text-custom-white bg-light-green ">
                   <img src="assets/img/farms/125x125/cuisine-8.jpg" class="rounded-circle" alt="categories">
@@ -236,8 +222,9 @@
     </div>
   </div>
 </section>
+
 <!-- your previous order -->
-<section class="section-padding sale-products">
+<section class="section-padding sale-products bg-light-green">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -325,7 +312,7 @@
         </div>
       </div>
       <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
-        <div class="product-item main-box mb-md-20">
+        <div class="product-item main-box mb-xl-20">
           <div class="img">
             <a href="#">
               <img src="assets/img/dish/150x151/dish-4.jpg" alt="image">
@@ -351,7 +338,7 @@
         </div>
       </div>
       <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
-        <div class="product-item main-box mb-xs-20">
+        <div class="product-item main-box mb-xl-20">
           <div class="img">
             <a href="#">
               <img src="assets/img/dish/150x151/dish-5.jpg" alt="image">
@@ -377,7 +364,7 @@
         </div>
       </div>
       <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
-        <div class="product-item main-box">
+        <div class="product-item main-box mb-xl-20">
           <div class="img">
             <a href="#">
               <img src="assets/img/dish/150x151/dish-6.jpg" alt="image">
