--- a/app/src/app/app.component.scss
+++ b/app/src/app/app.component.scss
@@ -210,12 +210,12 @@
 //   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
 // }
 
-// footer {
-//   margin-top: 8px;
-//   display: flex;
-//   align-items: center;
-//   line-height: 20px;
-// }
+footer {
+  margin-top: 8px;
+  // display: flex;
+  // align-items: center;
+  // line-height: 20px;
+}
 
 // footer a {
 //   display: flex;
