--- a/app/src/app/shared/navbar/navbar.component.html
+++ b/app/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <!-- Navigation -->
 <nav class="toobar navbar navbar-expand-lg fixed-top" role="banner" id="mainNav">
-  <div class="container">
+  <div class="container nav-container">
     <ul class="navbar-nav navbar-brand text-uppercase ml-auto">
       <i class="nav-item">
         <a class="nav-link js-scroll-trigger" href="#page-top">GoogList</a>
@@ -26,7 +26,7 @@
           <a class="nav-link js-scroll-trigger" href="#page-top">Home</a>
         </i>
         <i class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="pages/login.html">Login</a>
+          <a class="nav-link js-scroll-trigger" routerLink="/login" routerLinkActive="active">Login</a>
         </i>
         <i class="nav-item">
           <a class="nav-link js-scroll-trigger" href="pages/register.html">Cadastro</a>
