chore: routs implamentations

--- a/app/src/app/login/login.component.html
+++ b/app/src/app/login/login.component.html
@@ -31,8 +31,8 @@
                     </div>
                     <div class="form-group checkbox-reset">
                       <label class="custom-checkbox mb-0">
-                        <input type="checkbox" name="#"> <span class="checkmark"></span>Lembre-se de mim</label> <a
-                        href="#">Resetar Senha</a>
+                        <input type="checkbox" name="#"> <span class="checkmark"></span>Lembre-se de mim</label>
+                      <a href="#">Resetar Senha</a>
                     </div>
                     <div class="form-group">
                       <button type="submit" class="btn-second btn-submit full-width">
@@ -48,7 +48,7 @@
                       <button type="submit" class="btn-second btn-google full-width">
                         <img src="../assets/img/google-logo.png" alt="btn logo">Continue com Google</button>
                     </div>
-                    <div class="form-group text-center mb-0"> <a href="register.html">Criar sua conta</a>
+                    <div class="form-group text-center mb-0"> <a href="/register">Criar sua conta</a>
                     </div>
                   </div>
                 </div>
