--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,20 +1,3 @@
-<!-- Toolbar -->
-<div class="toolbar" role="banner">
- <app-navbar></app-navbar>
-</div>
-
-<div class="content" role="main">
-  <app-home></app-home>
-
-  <app-search></app-search>
-  <!-- Footer -->
-  <footer class="footer">
-    <app-footer></app-footer>
-  </footer>
-
-  <app-login></app-login>
-  <!-- <app-register></app-register> -->
-
-</div>
-
-<!-- <router-outlet></router-outlet> -->
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
