--- a/app/src/app/search/search.component.html
+++ b/app/src/app/search/search.component.html
@@ -1,83 +1,89 @@
-<div class="container">
-  <div class="section-header-left">
-    <h3 class="text-light-black header-title title">Pesquisar produtos</h3>
-    <form>
-      <div class="form-row">
-        <div class="form-group col-md-4">
-          <label for="inputCity">Cidade</label>
-          <input type="text" class="form-control" id="inputCity">
+<section class="section-padding sale-products bg-light">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="section-header-left">
+          <h3 class="text-light-black header-title title">Pesquisar produtos</h3>
+          <form>
+            <div class="form-row">
+              <div class="form-group col-md-4">
+                <label for="inputCity">Cidade</label>
+                <input type="text" class="form-control" id="inputCity">
+              </div>
+              <div class="form-group col-md-4">
+                <label for="inputState">Estado</label>
+                <select id="inputState" class="form-control">
+                  <option selected>Choose...</option>
+                  <option>...</option>
+                </select>
+              </div>
+              <div class="form-group col-md-4">
+                <label for="inputCategory">Categoria</label>
+                <select id="inputCategory" class="form-control">
+                  <option selected>Choose...</option>
+                  <option>...</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-4">
+                <label>Descrição</label>
+                <input type="text" class="form-control" placeholder="">
+              </div>
+              <div class="form-group col-md-4">
+                <label for="inputPassword4">Valor Mínimo</label>
+                <input type="decimal" class="form-control">
+              </div>
+              <div class="form-group col-md-4">
+                <label for="inputPassword4">Valor Máximo</label>
+                <input type="decimal" class="form-control">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck">
+                <label class="form-check-label" for="gridCheck">
+                  Enviar alerta
+                </label>
+              </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Buscar</button>
+          </form>
         </div>
-        <div class="form-group col-md-4">
-          <label for="inputState">Estado</label>
-          <select id="inputState" class="form-control">
-            <option selected>Choose...</option>
-            <option>...</option>
-          </select>
-        </div>
-        <div class="form-group col-md-4">
-          <label for="inputState">Categoria</label>
-          <select id="inputState" class="form-control">
-            <option selected>Choose...</option>
-            <option>...</option>
-          </select>
-        </div>
-      </div>
-      <div class="form-row">
-        <div class="form-group col-md-4">
-          <label >Descrição</label>
-          <input type="text" class="form-control" placeholder="">
-        </div>
-        <div class="form-group col-md-4">
-          <label for="inputPassword4">Valor Mínimo</label>
-          <input type="decimal" class="form-control">
-        </div>
-        <div class="form-group col-md-4">
-          <label for="inputPassword4">Valor Máximo</label>
-          <input type="decimal" class="form-control">
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="gridCheck">
-          <label class="form-check-label" for="gridCheck">
-            Enviar alerta
-          </label>
-        </div>
-      </div>
-      <button type="submit" class="btn btn-primary">Buscar</button>
-    </form>
-  </div>
-</div>
 
-<div class="container">
-  <table class="table table-dark">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>@twitter</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+        <div class="container">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">First</th>
+                <th scope="col">Last</th>
+                <th scope="col">Handle</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>@twitter</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
