--- a/app/src/app/shared/navbar/navbar.component.html
+++ b/app/src/app/shared/navbar/navbar.component.html
@@ -1,17 +1,15 @@
 <!-- Navigation -->
 <nav class="toobar navbar navbar-expand-lg fixed-top" role="banner" id="mainNav">
-  <div class="container nav-container">
+  <div class="container nav-container ui-g">
     <ul class="navbar-nav navbar-brand text-uppercase ml-auto">
       <i class="nav-item">
         <a class="nav-link js-scroll-trigger" href="#page-top">GoogList</a>
       </i>
     </ul>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-      data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-      aria-label="Toggle navigation">
-      Menu
+    <a class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+      aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" (click)="menu = !menu">
       <i class="fa fa-bars"></i>
-    </button>
+    </a>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <!-- search -->
       <div class="col-lg-6 col-md-7">
@@ -19,19 +17,28 @@
           <input type="text" class="form-control" placeholder="Frutas, Vegetais, Leite, Ovos">
         </div>
       </div>
-      <button class="btn btn-success my-2 my-sm-0" type="submit">Buscar</button>
+      <a href="/search"><button class="btn btn-success my-2 my-sm-0" type="submit">Buscar</button></a>
+
       <!-- menu -->
       <ul class="navbar-nav text-uppercase ml-auto">
         <i class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#page-top">Home</a>
+          <a class="nav-link js-scroll-trigger" href="/home" routerLinkActive="active">Home</a>
         </i>
         <i class="nav-item">
           <a class="nav-link js-scroll-trigger" routerLink="/login" routerLinkActive="active">Login</a>
         </i>
         <i class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="pages/register.html">Cadastro</a>
+          <a class="nav-link js-scroll-trigger" href="/register" routerLinkActive="active">Cadastro</a>
         </i>
       </ul>
     </div>
   </div>
+  <ul class="navbar-menu" [hidden]="!menu">
+    <li class="navbar-user">Usuario teste</li>
+    <li class="navbar-menu-item"><a href="#">Home</a></li>
+    <li class="navbar-menu-item"><a href="#">Produtos</a></li>
+    <li class="navbar-menu-item"><a href="#">Cadastro</a></li>
+    <li class="navbar-menu-item"><a href="#">Login</a></li>
+    <li class="navbar-menu-item"><a href="#">Logout</a></li>
+  </ul>
 </nav>
